--- a/math.yml
+++ b/math.yml
@@ -898,7 +898,7 @@ matches:
     replace: "\\begin{frame}\n$|$\n\\end{frame}"
 
   - trigger: "pair#"
-    replace: "\\paring{$|$}{ }"
+    replace: "\\pairing{$|$}{ }"
 
 
 
