--- a/math.yml
+++ b/math.yml
@@ -31,6 +31,12 @@ matches:
   - trigger: "remarks#"
     replace: "\\begin{remarks}\n$|$\n\\end{remarks}"
 
+  - trigger: "concept#"
+    replace: "\\begin{concept}\n$|$\n\\end{concept}"
+
+  - trigger: "rule#"
+    replace: "\\begin{rule}\n$|$\n\\end{rule}"
+
   - trigger: "bar#"
     replace: "\\bar{$|$}"
 
